# ecommerce-ai-multiagent-assistant

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/agents/: base.py
backend/app/agents/analytics/: __init__.py  agent.py  executor.py  normalizer.py  planner.py  schema_builder.py
backend/app/agents/commerce/: __init__.py  agent.py  analyzer.py  extractor.py  processor.py  schema_detector.py
backend/app/agents/knowledge/: __init__.py  agent.py  answerer.py  chunker.py  ingester.py  ranker.py  retriever.py
backend/app/agents/triage/: __init__.py  agent.py  handler.py
backend/app/api/: __init__.py  dependencies.py  main.py  middleware.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  health.py
backend/app/api/schemas/: __init__.py  chat.py  documents.py  health.py
backend/app/config/: __init__.py  constants.py  exceptions.py  settings.py
backend/app/contracts/: __init__.py  answer.py  router_decision.py
backend/app/graph/: __init__.py  build.py  interrupts.py  nodes.py  state.py
backend/app/infrastructure/cache/: __init__.py  cache_manager.py  (+2 more)
backend/app/routing/: __init__.py  allowlist.json  allowlist.py  classifier.py  router.py
backend/app/utils/: __init__.py  date.py  text.py  typing_ext.py  validation.py
backend/scripts/: __init__.py  ingest_csvs.py  ingest_pdfs.py  seed_data.py  setup_db.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  conftest.py  test_analytics_flows.py  test_chat_flows.py  test_commerce_flows.py  test_knowledge_flows.py  test_routing_flows.py
backend/tests/integration/: __init__.py  conftest.py
backend/tests/unit/: __init__.py
(+116 files in other folders)
