[tool.poetry]
name = "ecommerce-ai-multiagent-assistant-backend"
version = "0.1.0"
description = "Multi-agent AI assistant backend"
authors = ["E-Commerce AI Multi-Agent Assistant Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
pgvector = "^0.2.4"
langgraph = "^0.0.20"
langgraph-cli = "^0.0.20"
openai = "^1.3.0"
redis = "^5.0.1"
celery = "^5.3.4"
httpx = "^0.25.2"
structlog = "^23.2.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.6"
python-docx = "^1.1.0"
pdfplumber = "^0.10.3"
pytesseract = "^0.3.10"
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
pandas = "^2.1.3"
numpy = "^1.26.2"
sentence-transformers = "^2.2.2"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
types-redis = "^4.6.0.11"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

